[package]
name = "RippleDB"
version = "0.1.0"
authors = ["GGabi <gabrielroels@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.15.2"
hashbrown = "0.6"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"