[package]
name = "ripple_db"
version = "0.1.0"
authors = ["GGabi <gabrielroels@googlemail.com>"]
edition = "2018"

[dependencies]
bitvec = "0.17.4"
bimap = "0.4.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"
rio_turtle = "0.3.0"
rio_xml = "0.3.0"
rio_api = "0.3.1"
futures = "0.3.1"
num_cpus = "1.12.0"
k2_tree = "0.5.2"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.2"
time-test = "0.2.2"

[[bench]]
name = "graph_bench"
harness = false